@@ -1,5 +1,10 @@
 2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el: Support Emacs versions that do not have
+	define-error.
+
+2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-inspect.el: Remove version header.
 
 2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
